# rustlang-cargo-issue-14740

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: lib.rs
